(Attempted) link colour bug fix on Safari

--- a/wp-content/themes/fipradotcom/sass/pages/_ep-election-analysis.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_ep-election-analysis.scss
@@ -314,7 +314,8 @@
         opacity:0.7;
       }
 
-      a {
+      a:link,
+      a:visited {
         display: block;
         width:100%;
         padding:5px 10px;
